[package]
name = "dpx"
version = "0.1.1"
edition = "2021"
description = "Dropbox API from the command line."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version= "2.5.0", features=["json"]}
directories = "4.0.1"
pkce = "0.1.1"
serde = { version = "1", features = ["derive"] }
zip-extract = "0.1.1"
